--- a/FInal Assestment/contact.html
+++ b/FInal Assestment/contact.html
@@ -14,7 +14,7 @@
 <body id="top">
     <nav class="Menu">
         <ul>
-            <li class="nav_resume"><a href="main.html">Home</a></li>
+            <li class="nav_resume"><a href="index.html">Home</a></li>
             <li class="nav_resume"><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
