--- a/FInal Assestment/honesty.html
+++ b/FInal Assestment/honesty.html
@@ -9,7 +9,7 @@
 </head>
 <body id="top">
    <div class="honestly" >
-        <button class="homebutton"><a href="main.html">Home</a></button>
+        <button class="homebutton"><a href="index.html">Home</a></button>
             <h2>Honesty Statement</h2>
 
         <p>I declare that my Final assessment assignment is wholly my own work in accordance
