--- a/FInal Assestment/resume.html
+++ b/FInal Assestment/resume.html
@@ -14,7 +14,7 @@
         <h1 class="name"><em>Hello, I am</em> <br><strong class="chie">Archie Rivac</strong></h1>
         <nav class="Menu">
             <ul>
-                <li class="nav_resume"><a href="main.html">Home</a></li>
+                <li class="nav_resume"><a href="index.html">Home</a></li>
                 <li class="nav_resume"><a href="contact.html">Contact me</a></li>
             </ul>
         </nav>
